# firecode_testwork

./: .gitignore  Readme.md  manage.py  pyproject.toml
city/: admin.py  models.py  serializers.py  urls.py  views.py
city/migrations/: 0001_initial.py
firecode/: asgi.py  base.py  settings.py.template  urls.py  wsgi.py
shop/: models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_remove_shop_city_pk.py
street/: admin.py  models.py  serializers.py  urls.py  views.py
street/migrations/: 0001_initial.py
